--- a/style_sheets/Introduction.tex
+++ b/style_sheets/Introduction.tex
@@ -1,8 +1,17 @@
 \chapter{Introduction}
-\section{\label{section:overview}Overview}
-   The classic approach to proving a theorem is some really difficult 
-   mathematics.  For the theory of relativity, I asked grandpa Al exactly 
-   how he proved it.  He gave me a few hints, including some stuff about
-   rest mass and big electro-motive force.  I think he is really smart.
-\section{Conclusions}
-   I conclude that this is a really short thesis.
+Social insects are basically species that lives in colonies and manifest three characteristics \cite{SocialInsect}. a. Group integration\cite{anderson2001individual}, b. Division of labor\cite{beshers2001models} and c. Overlapping of generations\cite{wilson2005eusociality}. These creatures have survived many mass level extinction events that happened in the earth. Millions of years of genetic evolution to survive in the hostile environment helped them to adapt to the environment and master the strategies of survival.  \par
+Their strategies to avoid congestion and optimize their movements to move or forage in most efficient ways without any central authorities has attracted so many researchers and scientists over the centuries\cite{narzt2010self}. As a result, we got a new branch of science which is called myrmecology. In modern computer science, machine learning\cite{dorigo1997ant}, complex interactive networks\cite{he2011ant}, parallel computing\cite{bonabeau2000inspiration} and many other topics have been inspired by the studying and modeling of ants. \par
+Harvester ants are social insects. They forage from the environment. Most of their foraging activities are during the morning or in the evening sessions. And their foraging activity is at the top during the summer\cite{hobbs1985harvester, whitford1975factors}.  In this study, we will mostly talk about \textit{Progonomyrmex} species which are group foragers\cite{whitford1978foraging}. Foraging activities of harvester ants including \textit{Progonomyrmex sp.} depends on many factors like environment temperature, light, and availability of seeds\cite{whitford1975factors}.\par 
+Social insects like ants use pheromone to communicate with each other to perform their daily activities which also includes foraging\cite{jackson2006communication}.
+  The previous study has shown that they follow three strategies to forage from the environment\cite{flanagan2012quantifying}. Ants use memory to remember the location of the food source. They communicate with other ants using pheromone and they perform the random walk in the spatial dimension in search of food.\par 
+  Foraging of ants from a particular food source depends mostly on the how  food is distributed in the environment\cite{traniello1989foraging}. To analyze the foraging strategies of ants field experiments has been conducted on three species of Pogonomyrmex desert harvester ants. Foods were distributed among the nest in different distributions to observe the effect of food density on foraging. It was demonstrated that ants take some time to discover the large pile of seeds, but they start recruiting from the food source once they discover it\cite{flanagan2012quantifying}. 
+
+Based on this behavior an agent-based model CPFA\cite{hecker2015beyond} is developed by Moses Biological Computation Lab. CPFA is implemented on various platforms. The purpose agents of CPFA is to collect resources from the spatial environment by the strategies mentioned above. 
+
+As mentioned previously, they use three different strategies to forage\cite{collett2010desert,flanagan2012quantifying}, it was not clear what strategies they use to recruit from a clumped food source\cite{tarasewich2002swarm}. Our initial observation showed that when ants discover a pile they lay pheromone trail for other ants to follow. When other ants start following the pheromone trail, their foraging rate goes up for that pile. We have used change point detection algorithm to detect that change in foraging rate. Our goal was to determine what strategies ants mostly use to forage from clumped food source. It was difficult to determine from the field data whether the detected change points indicates the pheromone laying event. To do so we have used simulations. 
+
+We have used CPFA to simulate the field experiments. The environment of CPFA has been tuned to mimic the field experiments for three different species \textit{P. Rugosus}, \textit{P. Maricopa} and \textit{P. Desertorum}. We have implemented different change point detection algorithms on the simulated data\cite{fryzlewicz2014wild, scott1974cluster, kukulski2000normal}. The change point detection algorithms were tuned to detect change points when the pheromone is laid. For each of the species the change point detection algorithm has different sets of parameters. As from the simulation, we know exactly when the pheromone was laid and site fidelity was used, we verified our change point detection algorithms by using the simulation data. Based on the results of the simulation we have selected best change point detection method. And applied the result to the field data. 
+
+We observe ants use pheromone more when the food sources are clumped. And they discover the pile more frequently if the food source is large. They don't use the pheromone to recruit from the food source that is scattered in the environment. 
+
+As we mentioned Foraging of ants depends on many factors including temperature, availability of food, distance from food to the nest and so many\cite{whitford1975factors,gordon1996founding}. So in some of the field experiments, ants did not collect enough seeds. Which is why we were unable to detect any change points in some of the experiments for each of the species. Since the CPFA does not depend on these conditions, we have detected change points in each of the simulations.
